# lace

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: main.lace
frontend/: Cargo.toml
frontend/src/: diagnostic.rs  lib.rs  operator.rs  span.rs  utils.rs
frontend/src/ir_gen/: mod.rs
frontend/src/lexer/: mod.rs  token.rs
frontend/src/parser/: ast.rs  mod.rs  pattern.rs  ty.rs
frontend/src/semantics_checker/: mod.rs  symbol.rs  ty.rs  type_map.rs
ir/: Cargo.toml
ir/src/: function.rs  inst.rs  lib.rs  module.rs
ir/src/core/: basic_block.rs  function.rs  inst.rs  mod.rs  module.rs  ss.rs  ty.rs
ir/src/opts/: constant_fold.rs  dce.rs  mod.rs
span/: Cargo.toml
vm/: Cargo.toml
vm/src/: function.rs  inst.rs  lib.rs  value.rs
vm_cli/: Cargo.toml
vm_cli/src/: main.rs
