[package]
name = "lacec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lace-frontend = { path = "../frontend" }
lace-ir = { path = "../ir" }
lace-vm = { path = "../vm" }
clap = { version = "4.6.0", features = ["derive"] }
tinycolor = "1.1.3"
lasso.workspace = true
