[package]
name = "lace-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lace-ir = { path = "../ir" }
lace-vm = { path = "../vm" }
lace-span = { path = "../span" }
lasso.workspace = true
tinycolor.workspace = true
strsim = "0.11.1"
